[gd_scene load_steps=42 format=3 uid="uid://q00la62s5ldb"]

[ext_resource type="Script" uid="uid://cp4jaovs7nalj" path="res://Scripts/main.gd" id="1_wsu2k"]
[ext_resource type="Texture2D" uid="uid://c2jxpj223g87v" path="res://Assets/Fondos/fondo_guia.png" id="2_k12tt"]
[ext_resource type="Script" uid="uid://c1ntqtosabjsh" path="res://Scripts/main_margin.gd" id="3_h1bgf"]
[ext_resource type="Texture2D" uid="uid://72gbdc34hq4w" path="res://Assets/Under.png" id="4_b3802"]
[ext_resource type="Texture2D" uid="uid://gq4spfbkaut" path="res://Assets/Progress.png" id="5_fevyy"]
[ext_resource type="FontVariation" uid="uid://b3illvfg3cheg" path="res://Fonts/font_normal.tres" id="6_hibaj"]
[ext_resource type="FontVariation" uid="uid://cqwsdk8pf6boa" path="res://Fonts/font_negrita.tres" id="7_pdsj5"]
[ext_resource type="Texture2D" uid="uid://05gmnut8t3co" path="res://Assets/Tutorial/comprobacion_mail.png" id="8_ee4r6"]
[ext_resource type="Texture2D" uid="uid://bk3a0l00hemt3" path="res://Assets/Logos/Mute.png" id="9_b3802"]
[ext_resource type="FontFile" uid="uid://bi23m5e21csci" path="res://Fonts/RobotoFlex-VariableFont_GRAD,XOPQ,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf" id="9_gt3je"]
[ext_resource type="Texture2D" uid="uid://b5cdswkts0mls" path="res://Assets/Clementina/Parada.png" id="10_3pmx8"]
[ext_resource type="Texture2D" uid="uid://dm5x4aaxou1tl" path="res://Assets/Logos/Unmute.png" id="10_fevyy"]
[ext_resource type="Script" uid="uid://c2xmrk5utsnmw" path="res://Scripts/mascot.gd" id="11_u50mg"]
[ext_resource type="Texture2D" uid="uid://c34spk53dlwq5" path="res://Assets/Clementina/Saludando_izq.png" id="12_cbgmd"]
[ext_resource type="Texture2D" uid="uid://bs1wbcjotk8io" path="res://Assets/Fondos/fondo_splash.png" id="13_1w6v2"]
[ext_resource type="Texture2D" uid="uid://cqep3r25y50vw" path="res://Assets/Logos/sigamosestudiando.png" id="14_ueoa1"]
[ext_resource type="Texture2D" uid="uid://bpt2iyobv8bxd" path="res://Assets/Logos/unpaz.png" id="15_6vcvc"]
[ext_resource type="AudioStream" uid="uid://wrvprc2bxpsw" path="res://Audio/Background.ogg" id="16_k12tt"]

[sub_resource type="Gradient" id="Gradient_efxa6"]
colors = PackedColorArray(1, 0.8156863, 0.8, 1, 0.5372549, 0.72156864, 0.8862745, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dg77c"]
gradient = SubResource("Gradient_efxa6")
fill_from = Vector2(0, 0.15925926)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ycdy4"]
texture = SubResource("GradientTexture2D_dg77c")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(2.61109e-06, 0.0873075, 0.304166, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(3.92266e-06, 0.116, 0.376581, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-288, 243)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_3pmx8")]
}

[sub_resource type="Animation" id="Animation_vivmo"]
resource_name = "despedida"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(480, 192), Vector2(480, 192), Vector2(480, 768)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("10_3pmx8"), ExtResource("12_cbgmd")]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "transition2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-288, 256), Vector2(128, 256)]
}

[sub_resource type="Animation" id="Animation_kek77"]
resource_name = "transition3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 256), Vector2(64, 288)]
}

[sub_resource type="Animation" id="Animation_5vw27"]
resource_name = "transition4"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 288), Vector2(920, 320)]
}

[sub_resource type="Animation" id="Animation_efxa6"]
resource_name = "transition5"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(160, 224)]
}

[sub_resource type="Animation" id="Animation_dg77c"]
resource_name = "transition6"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 224), Vector2(920, 320)]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "transition7"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(920, 224)]
}

[sub_resource type="Animation" id="Animation_w48qg"]
resource_name = "transition8"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 224), Vector2(920, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"despedida": SubResource("Animation_vivmo"),
&"transition2": SubResource("Animation_1bvp3"),
&"transition3": SubResource("Animation_kek77"),
&"transition4": SubResource("Animation_5vw27"),
&"transition5": SubResource("Animation_efxa6"),
&"transition6": SubResource("Animation_dg77c"),
&"transition7": SubResource("Animation_ycdy4"),
&"transition8": SubResource("Animation_w48qg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="LabelSettings" id="LabelSettings_efxa6"]
font = ExtResource("9_gt3je")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dg77c"]
line_spacing = 20.0
font = ExtResource("9_gt3je")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_yaehf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Splash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Splash/LogoContainer/SigamosEstudiando:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Splash/LogoContainer/UNPAZ:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2cqfq"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_074og"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cegan"]
resource_name = "splash_screen"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Splash:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Splash/LogoContainer/SigamosEstudiando:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Splash/LogoContainer/UNPAZ:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_074og"]
_data = {
&"RESET": SubResource("Animation_yaehf"),
&"fade_in": SubResource("Animation_2cqfq"),
&"fade_out": SubResource("Animation_074og"),
&"splash_screen": SubResource("Animation_cegan")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsu2k")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k12tt")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32
script = ExtResource("3_h1bgf")

[node name="TextureProgressBar" type="TextureProgressBar" parent="MainMargin"]
layout_mode = 2
size_flags_horizontal = 4
max_value = 15.0
value = 1.0
texture_under = ExtResource("4_b3802")
texture_progress = ExtResource("5_fevyy")

[node name="TextContainer" type="MarginContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 96

[node name="MainContainer" type="VBoxContainer" parent="MainMargin/TextContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="RichTextLabel" parent="MainMargin/TextContainer/MainContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hibaj")
theme_override_fonts/bold_font = ExtResource("7_pdsj5")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Description" type="RichTextLabel" parent="MainMargin/TextContainer/MainContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hibaj")
theme_override_fonts/bold_font = ExtResource("7_pdsj5")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="ImageContainer" type="PanelContainer" parent="MainMargin/TextContainer/MainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ycdy4")

[node name="Image" type="TextureRect" parent="MainMargin/TextContainer/MainContainer/ImageContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("8_ee4r6")
stretch_mode = 2

[node name="Mute" type="CheckButton" parent="MainMargin/TextContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_icons/checked = ExtResource("9_b3802")
theme_override_icons/unchecked = ExtResource("10_fevyy")

[node name="ButtonContainer" type="HSplitContainer" parent="MainMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
dragging_enabled = false

[node name="BackButton" type="Button" parent="MainMargin/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(128, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.05376742, 0.26932824, 0.34293354, 1)
theme_override_fonts/font = ExtResource("9_gt3je")
theme_override_font_sizes/font_size = 24
text = "Atrás"
flat = true

[node name="MainButton" type="Button" parent="MainMargin/ButtonContainer"]
custom_minimum_size = Vector2(288, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("9_gt3je")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_272bh")
text = "Comenzar"

[node name="Info" type="Button" parent="MainMargin"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("6_hibaj")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_272bh")
text = "i"

[node name="Mascot" type="TextureRect" parent="."]
custom_minimum_size = Vector2(340, 266)
layout_mode = 0
offset_left = -288.0
offset_top = 243.0
offset_right = 52.00049
offset_bottom = 509.00024
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("10_3pmx8")
expand_mode = 3
stretch_mode = 5
script = ExtResource("11_u50mg")

[node name="MascotAnimations" type="AnimationPlayer" parent="Mascot"]
libraries = {
&"": SubResource("AnimationLibrary_7mycd")
}

[node name="Credits" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1088, 544)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_efxa6")

[node name="MarginCredits" type="MarginContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32

[node name="CreditsContainer" type="VBoxContainer" parent="Credits/MarginCredits"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Team" type="Label" parent="Credits/MarginCredits/CreditsContainer"]
layout_mode = 2
text = "Equipo de Trabajo"
label_settings = SubResource("LabelSettings_efxa6")

[node name="Members" type="Label" parent="Credits/MarginCredits/CreditsContainer"]
layout_mode = 2
text = "Secretaria Académica: Lic. Paula Zabaleta
Directora General de Acceso y Apoyo al Estudiante: Lic. Luciana Aguilar
Directora de Pasantía y Graduados: Lic. Julia Thea
Dirección: Eda Lía Artola
Programación: Matías Nahuel González Sandoval
Diseño: Florencia Belate Dietrich
Coordinación: Néstor Arriola
Haz click para regresar a la guía"
label_settings = SubResource("LabelSettings_dg77c")

[node name="Version" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.235294)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "v1.0.1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Splash" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_1w6v2")

[node name="LogoContainer" type="HBoxContainer" parent="Splash"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = -99.0
offset_right = 551.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SigamosEstudiando" type="TextureRect" parent="Splash/LogoContainer"]
layout_mode = 2
texture = ExtResource("14_ueoa1")
stretch_mode = 3

[node name="UNPAZ" type="TextureRect" parent="Splash/LogoContainer"]
layout_mode = 2
texture = ExtResource("15_6vcvc")
stretch_mode = 3

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_k12tt")
volume_db = -15.0
autoplay = true
parameters/looping = true

[node name="MainAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_074og")
}
autoplay = "splash_screen"

[connection signal="value_changed" from="MainMargin/TextureProgressBar" to="MainMargin" method="_on_progress_bar_value_changed"]
[connection signal="value_changed" from="MainMargin/TextureProgressBar" to="Mascot" method="_on_progress_bar_value_changed"]
[connection signal="toggled" from="MainMargin/TextContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="MainMargin/ButtonContainer/BackButton" to="MainMargin" method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMargin/ButtonContainer/MainButton" to="MainMargin" method="_on_main_button_pressed"]
[connection signal="pressed" from="MainMargin/Info" to="." method="_on_info_pressed"]
[connection signal="animation_finished" from="Mascot/MascotAnimations" to="MainMargin" method="_on_mascot_animations_animation_finished"]
[connection signal="animation_finished" from="Mascot/MascotAnimations" to="Mascot" method="_on_mascot_animations_animation_finished"]
